# cs_academy_heat_diffusion

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md
lessons/: 000_temperature_grid.md  001_heat_equation.md  002_finite_differences.md  003_simulating_diffusion.md  README.md
notebooks/: README.md  heat_diffusion.ipynb  heat_diffusion_colab.ipynb
src/: __init__.py
